# hh

./: .env.example  .gitignore  .nojekyll  01-donor-geography.html  02-timing.html  03-overlap.html  03-travel-distance.html  04-overlap.html  04-trends.html  05-donor-attendance.html  06-donor-size.html  07-donor-persistence.html  08-donor-preferences.html  09-classes.html  98-todo.html  99-methodology.html  CLAUDE.md  README.md  TODO.md  index.html  pyproject.toml  search.json
config/: fieldmap.yaml  overrides.yaml  settings.yaml
docs/: getting-a-neon-api-key.md
meta-docs/: RULES.md
notebooks/: 01-donor-geography.qmd  02-timing.qmd  03-overlap.qmd  03-travel-distance.qmd  04-overlap.qmd  04-trends.qmd  05-donor-attendance.qmd  06-donor-size.qmd  07-donor-persistence.qmd  08-donor-preferences.qmd  09-classes.qmd  98-todo.qmd  99-methodology.qmd  _parked-exhibits.qmd  _quarto.yml  index.qmd
scripts/: build.py  geocode.py  probe_neon.py  pull.py  sweep_registrations.py  validate_categorize_vs_r.py
src/hh/: __init__.py  config.py  io.py  utils.py  viz.py
src/hh/analytics/: __init__.py  donors.py  households.py  productions.py  registrations_enriched.py  timing.py
src/hh/categorize/: __init__.py  _match.py  major.py  minor.py
src/hh/clean/: __init__.py  accounts.py  donations.py  events.py  households.py  (+2 more)
tests/: test_analytics.py  test_categorize.py  test_clean.py  test_config.py  test_geo.py  test_io.py  test_neon_client.py  test_neon_extract.py  test_neon_load_csv.py  test_provenance.py  test_r_validation.py  test_standardize.py  test_utils.py
(+12 files in other folders)
